<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.proximojogo.proximojogo.ui.TesteFirebase">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lb_nome_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nome do Time">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nome_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:inputType="textCapCharacters"
            android:imeActionLabel="@string/pronto"
            android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lb_responsavel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Responsável">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/responsavel_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:inputType="textCapWords"
            android:imeActionLabel="@string/pronto"
            android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lb_telefone_responsavel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Telefone">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/telefone_responsavel_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:inputType="numberDecimal"
            android:imeActionLabel="@string/pronto"
            android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:id="@+id/linear_botoes_agenda">

            <Button
                android:id="@+id/bt_salvar_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/texto_btn"
                android:theme="@style/btnSalvar" />

            <Button
                android:id="@+id/bt_listar_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listar"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/texto_btn"
                android:theme="@style/btnSalvar" />

            <Button
                android:id="@+id/bt_excluir_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excluir"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/texto_btn"
                android:theme="@style/btnSalvar" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
