<resources>
    <string name="app_name">ProximoJogo</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">Próximo Jogo</string>

...
    <string name="data">Data</string>
    <string name="valor">Valor</string>
    <string name="equipe">Equipe</string>
    <string name="versus">X</string>
    <string name="adversario">Adversário</string>
    <string name="observacao">Observação</string>
    <string name="salvar">Salvar</string>
    <string name="listar">Listar</string>
    <string name="excluir">Excluir</string>
    <string name="dia_semana">Dia Semana</string>
    <string name="criar_evento">Criar Evento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
...
